# PhD-chapter4-SUHII-vegetation

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/dbf/: lc_lcz_tabulate_area_dbf.dbf  lc_lcz_tabulate_area_dbf.dbf.xml
docs/: README.md  checklist.md
notebook/: 01_suhii_vegetation_analysis.ipynb
scripts/: main.py
